@@ -16,6 +16,9 @@ npm install xml2js
 npm install twitter
 npm install node-proxy
 npm install mongodb
+npm install knox
+npm install connect-form
+
 
 
 
