@@ -1,0 +1,6 @@
+<div class="modalbox" style="display:block;margin:-4px;padding:6px;width:260px;height:90px;position:static">
+<form action="/api/upload/avatar" method="post" enctype="multipart/form-data">
+<input type="file" name="image" /><br>
+<input type="submit" value="Upload" style="width:242px;"/>
+</form>
+</div>
