@@ -34,5 +34,11 @@
   git clone git@github.com:rjrodger/node-oauth.git
 
 
+2011-05-25:
+  - npm updates
+  sudo npm install knox
+  sudo npm install connect-form
+
+
 
 
